--- a/KaamelottSampler/App.xaml
+++ b/KaamelottSampler/App.xaml
@@ -3,13 +3,15 @@
     x:Class="KaamelottSampler.App"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:KaamelottSampler">
+    xmlns:local="clr-namespace:KaamelottSampler"
+    xmlns:conv="clr-namespace:KaamelottSampler.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <conv:CharacterImageConverter x:Key="CharacterImageConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
