--- a/KaamelottSampler/Views/HomePage.xaml
+++ b/KaamelottSampler/Views/HomePage.xaml
@@ -6,100 +6,84 @@
     xmlns:vm="clr-namespace:KaamelottSampler.ViewModels"
     BackgroundColor="Black">
 
-    <Grid
-        Margin="10"
-        RowDefinitions="Auto, Auto, *, Auto"
-        RowSpacing="15">
-        <!--  Logo  -->
-        <Image
-            Grid.Row="0"
-            Aspect="AspectFit"
-            HeightRequest="100"
-            HorizontalOptions="Center"
-            Source="logo.png" />
+    <ContentPage.Resources />
 
-        <!--  Filtres  -->
+    <ContentPage.Content>
 
         <Grid
-            Grid.Row="1"
-            ColumnDefinitions="Auto, *"
-            RowDefinitions="Auto, Auto, Auto">
-            <Label
+            Margin="10"
+            RowDefinitions="Auto, Auto, *"
+            RowSpacing="15">
+            <!--  Logo  -->
+            <Image
                 Grid.Row="0"
-                Grid.Column="0"
-                Text="Rechercher :" />
-            <Entry
-                Grid.Row="0"
-                Grid.Column="1"
-                Text="{Binding FilterText}" />
-            <Label
+                Aspect="AspectFit"
+                HeightRequest="100"
+                HorizontalOptions="Center"
+                Source="logo.png" />
+
+            <!--  Filtres  -->
+
+            <Grid
                 Grid.Row="1"
-                Grid.Column="0"
-                Text="Personnage :" />
-            <Picker
-                Grid.Row="1"
-                Grid.Column="1"
-                ItemsSource="{Binding FilterCharacterList}"
-                SelectedItem="{Binding FilterSelectedCharacter}" />
-            <Button
+                ColumnDefinitions="Auto, *, Auto"
+                ColumnSpacing="10"
+                RowDefinitions="Auto, Auto, Auto"
+                RowSpacing="5">
+                <Label
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Text="Rechercher :"
+                    VerticalOptions="Center" />
+                <Entry
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Text="{Binding FilterText}" />
+                <Label
+                    x:Name="Lbl_Char"
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Text="Personnage :"
+                    VerticalOptions="Center" />
+                <Picker
+                    x:Name="Cb_Char"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    ItemsSource="{Binding FilterCharacterList}"
+                    SelectedItem="{Binding FilterSelectedCharacter}" />
+                <Button
+                    x:Name="ClearButton"
+                    Grid.Row="0"
+                    Grid.RowSpan="2"
+                    Grid.Column="2"
+                    Clicked="ClearButton_Clicked"
+                    Command="{Binding ClearCommand}"
+                    Style="{StaticResource SecondaryButtonStyle}"
+                    Text="Effacer" />
+                <Button
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Command="{Binding FilterCommand}"
+                    Text="Filtrer" />
+            </Grid>
+
+            <!--  Liste des Saamples  -->
+            <RefreshView
                 Grid.Row="2"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
-                Command="{Binding FilterCommand}"
-                Text="Filtrer" />
+                Command="{Binding LoadSamplesCommand}"
+                IsRefreshing="{Binding IsRefreshing}">
+                <CollectionView
+                    ItemTemplate="{StaticResource SaampleDataTemplateSelector}"
+                    ItemsSource="{Binding Saamples}"
+                    SelectedItem="{Binding SelectedSaample}"
+                    SelectionChangedCommand="{Binding SelectedSaampleCommand}"
+                    SelectionChangedCommandParameter="{Binding SelectedSaample}"
+                    SelectionMode="Single"
+                    VerticalScrollBarVisibility="Always" />
+            </RefreshView>
+
         </Grid>
 
-        <!--  Liste des Saamples  -->
-        <CollectionView
-            Grid.Row="2"
-            ItemsSource="{Binding Saamples}"
-            SelectedItem="{Binding SelectedSaample}"
-            SelectionChangedCommand="{Binding SelectedSaampleCommand}"
-            SelectionChangedCommandParameter="{Binding SelectedSaample}"
-            SelectionMode="Single"
-            VerticalScrollBarVisibility="Always">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <!--  Définition d'un Row de la liste  -->
-                    <Grid
-                        Margin="5"
-                        ColumnDefinitions="Auto, *"
-                        ColumnSpacing="5"
-                        RowDefinitions="Auto, Auto"
-                        RowSpacing="5">
-                        <Image
-                            Grid.Row="0"
-                            Grid.RowSpan="2"
-                            Grid.Column="0"
-                            Margin="10"
-                            Aspect="AspectFit"
-                            HeightRequest="100"
-                            Source="{Binding Imagefile, Converter={StaticResource CharacterImageConverter}}" />
-                        <Label
-                            Grid.Row="0"
-                            Grid.Column="1"
-                            FontSize="Medium"
-                            LineBreakMode="WordWrap"
-                            MaxLines="2"
-                            Text="{Binding Title}"
-                            TextColor="White" />
-                        <Label
-                            Grid.Row="1"
-                            Grid.Column="1"
-                            FontAttributes="Italic"
-                            FontSize="Small"
-                            Text="{Binding Episode}"
-                            TextColor="White" />
-                    </Grid>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-
-        <Button
-            Grid.Row="3"
-            Command="{Binding LoadSamplesCommand}"
-            Text="Charger les saamples" />
-
-    </Grid>
+    </ContentPage.Content>
 
 </ContentPage>
