--- a/KaamelottSampler/Views/SampleDetailPage.xaml
+++ b/KaamelottSampler/Views/SampleDetailPage.xaml
@@ -57,16 +57,19 @@
             Grid.Row="3"
             Grid.Column="1"
             Command="{Binding PlayMP3Command}"
+            ImageSource="ic_play_white.png"
             Text="Jouer MP3" />
         <Button
             Grid.Row="4"
             Grid.Column="1"
             Command="{Binding PlayTTSCommand}"
+            ImageSource="ic_play_white.png"
             Text="Jouer TTS" />
         <Button
             Grid.Row="5"
             Grid.Column="1"
             Command="{Binding ShareCommand}"
+            ImageSource="ic_share_white.png"
             Text="Partager" />
     </Grid>
 </ContentPage>
